@@ -2,6 +2,7 @@
     * Aborbed Test::Builder::Tester.  The last release broke it because its
       screen scraping Test::More and the failure output changed.  By
       distributing them together we ensure TBT won't break again.
+    * Test::Builder->BAILOUT() was missing.
 
 0.61_01
     - is_deeply() can now handle function and code refs in a very limited
